# youtube-api-rs

./: .gitignore  BACKERS.md  Cargo.toml  README.md
examples/seed/: .gitignore  Cargo.toml  README.md  config.json  index.html
examples/seed/src/: lib.rs  user.rs
src/: client.rs  config.rs  error.rs  extract_query_parameters.rs  lib.rs  login_flow.rs  response.rs  token.rs  video.rs
src/login/: login_flow.rs  mod.rs  token.rs
src/video/: data.rs  mod.rs  query.rs
