[package]
name = "youtube_api"
version = "0.0.1"
authors = ["arn-the-long-beard <arn.menant@gmail.com>"]
edition = "2018"
private = true

[lib]
crate-type = ["cdylib" ,"rlib"]


[dependencies]
seed = {git  ="https://github.com/seed-rs/seed", branch="master"}
serde = "1.0.125"
serde_json = "1.0.62"


[dev-dependencies]

