[package]
version = "0.1.0"
name = "seed_youtube_example"
repository = "https://github.com/seed-rs/seed-quickstart"
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"
[dependencies]
seed_styles = { git = "https://github.com/seed-rs/styles_hooks", package = "seed_styles", branch = "main" }
youtube_api={path = "../../"}

seed = {git  ="https://github.com/seed-rs/seed", branch="master"}
enclose = "1.1.8"
serde = "1.0.125"

[dependencies.google_sign_in_wasm]
branch="main"
git = "https://github.com/Ringrev/google_sign_in_wasm.git"
features=["seed"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
